@@ -1,16 +1,77 @@
-EXTRA_DIST = alloca.m4 atexit.m4 closeout.m4 codeset.m4 \
-	d-ino.m4 error.m4 exclude.m4 exitfail.m4 extensions.m4 \
-	fnmatch.m4 fpending.m4 getcwd-path-max.m4 getcwd.m4 \
-	getopt.m4 gettext.m4 glibc2.m4 glibc21.m4 gnulib-cache.m4 \
-	gnulib-comp.m4 gnulib-tool.m4 iconv.m4 intdiv0.m4 intmax.m4 \
-	inttypes-pri.m4 inttypes.m4 inttypes_h.m4 isc-posix.m4 \
-	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 longdouble.m4 \
-	longlong.m4 lstat.m4 mbchar.m4 mbiter.m4 mbrtowc.m4 \
-	mbstate_t.m4 memchr.m4 memcpy.m4 mempcpy.m4 memset.m4 \
-	nls.m4 obstack.m4 onceonly_2_57.m4 pathmax.m4 po.m4 \
-	printf-posix.m4 progtest.m4 quotearg.m4 regex.m4 \
-	restrict.m4 signed.m4 size_max.m4 stat-macros.m4 stdbool.m4 \
-	stdint_h.m4 strcase.m4 strcspn.m4 strdup.m4 strerror_r.m4 \
-	strpbrk.m4 strsep.m4 strstr.m4 uintmax_t.m4 ulonglong.m4 \
-	wchar_t.m4 wint_t.m4 xalloc.m4 xgetcwd.m4 xsize.m4
-
+EXTRA_DIST = \
+        alloca.m4 \
+        atexit.m4 \
+        closeout.m4 \
+        codeset.m4 \
+        d-ino.m4 \
+        dirname.m4 \
+        dos.m4 \
+        error.m4 \
+        exclude.m4 \
+        exitfail.m4 \
+        extensions.m4 \
+        fnmatch.m4 \
+        fpending.m4 \
+        getcwd-path-max.m4 \
+        getcwd.m4 \
+        getopt.m4 \
+        gettext.m4 \
+        glibc2.m4 \
+        glibc21.m4 \
+        gnulib-cache.m4 \
+        gnulib-comp.m4 \
+        gnulib-tool.m4 \
+        iconv.m4 \
+        intdiv0.m4 \
+        intmax.m4 \
+        intmax_t.m4 \
+        inttostr.m4 \
+        inttypes-pri.m4 \
+        inttypes.m4 \
+        inttypes_h.m4 \
+        isc-posix.m4 \
+        lcmessage.m4 \
+        lib-ld.m4 \
+        lib-link.m4 \
+        lib-prefix.m4 \
+        longdouble.m4 \
+        longlong.m4 \
+        lstat.m4 \
+        mbchar.m4 \
+        mbiter.m4 \
+        mbrtowc.m4 \
+        mbstate_t.m4 \
+        memchr.m4 \
+        memcpy.m4 \
+        mempcpy.m4 \
+        memset.m4 \
+        nls.m4 \
+        obstack.m4 \
+        onceonly_2_57.m4 \
+        pathmax.m4 \
+        po.m4 \
+        printf-posix.m4 \
+        progtest.m4 \
+        quotearg.m4 \
+        regex.m4 \
+        restrict.m4 \
+        signed.m4 \
+        size_max.m4 \
+        stat-macros.m4 \
+        stdbool.m4 \
+        stdint_h.m4 \
+        strcase.m4 \
+        strcspn.m4 \
+        strdup.m4 \
+        strerror_r.m4 \
+        strpbrk.m4 \
+        strsep.m4 \
+        strstr.m4 \
+        uintmax_t.m4 \
+        ulonglong.m4 \
+        wchar_t.m4 \
+        wint_t.m4 \
+        xalloc.m4 \
+        xgetcwd.m4 \
+        xsize.m4 \
+        extra_dist.sh
